fix modal not showing

--- a/src/App.css
+++ b/src/App.css
@@ -20,9 +20,9 @@ body {
   padding: 20px;
   background: rgba(240, 240, 240, 0.95);
   border-radius: 16px;
-  /*  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);*/
-  /* backdrop-filter: blur(10px);
-  -webkit-backdrop-filter: blur(10px); */
+  /* box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1); */
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
   border: 1px solid rgba(255, 255, 255, 0.4);
 }
 
